# launchmate-ai

./: Makefile  README.md  docker-compose.yml  phase1.sh  phase2.sh  phase2_fixed.sh  phase3.sh  phase4.sh  phase5.sh  phase6.sh
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/src/launchmate/: main.py
backend/src/launchmate/api/: dependencies.py
backend/src/launchmate/api/v1/: __init__.py
backend/src/launchmate/api/v1/endpoints/: amendments.py  auth.py  brand_kit.py  financials.py  founder_brief.py  generation.py  locking.py  market_research.py  overview.py  proactive_threads.py  projects.py  refinements.py  section_locking.py  tech_setup.py  threads.py  users.py  versions.py
backend/src/launchmate/core/: celery_app.py  config.py  database.py  exceptions.py  security.py
backend/src/launchmate/models/: __init__.py  amendment.py  brand_kit.py  enums.py  financials.py  market_research.py  proactive_thread.py  project.py  refinement.py  tech_setup.py  thread.py  user.py  version.py
backend/src/launchmate/tasks/: __init__.py  domain_tasks.py  email_tasks.py  generation_tasks.py  pdf_tasks.py  proactive_tasks.py
backend/src/launchmate/tools/: agent.py  agent.py.patch  bright_tools.py
backend/tests/: test_agent.py
